<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:checked="true"
            android:title="@string/notes_title_nav_menu" />
        <item
            android:id="@+id/nav_courses"
            android:title="@string/courses_title_nav_menu" />
        <item
            android:id="@+id/nav_recently_viewed"
            android:icon="@drawable/ic_baseline_visibility_24"
            android:title="@string/recently_viewed_notes_title_nav_menu" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share_title_nav_menu" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/send_title_nav_menu" />
            <item
                android:id="@+id/nav_how_many"
                android:icon="@drawable/ic_sharp_help_24"
                android:title="@string/how_many_nav_title" />
        </menu>
    </item>

</menu>
